# MediaGuardCmakeV3

./: .gitignore  CMakeLists.txt  FFmpeg4.22ReadMe.MD  LICENSE  LINUX设置共享库2024-3-12.txt  OpenCV4.0ReadMe.MD  README.md  RTSP流_重連.txt  Yolov8_Readme.MD  get_filename原版的判斷.cpp  git_command.md  runexecutable.sh
MediaGuard_Cmake/: CMakeLists.txt  HardAndSoftDecode_Ref.md  README.md  git_command.md
MediaGuard_Cmake/3rdlib/linux/x64/curl/lib/: libcurl.la
MediaGuard_Cmake/3rdlib/linux/x64/ffmpeg/doc/: developer.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffprobe-all.html  ffprobe.html  general.html  mailing-list-faq.html  platform.html
MediaGuard_Cmake/3rdlib/linux/x64/ffmpeg/include/libavutil/: ffversion.h
MediaGuard_Cmake/3rdlib/linux/x64/ffmpeg/lib/: libavutil.so.57.28.100  libswresample.so.4  libswscale.so.6.7.100
MediaGuard_Cmake/3rdlib/linux/x64/opencv4.9/lib/: libopencv_calib3d.so.4.9.0  libopencv_features2d.so.4.9.0  libopencv_flann.so.4.9.0  libopencv_highgui.so.4.9.0  libopencv_ml.so.409  libopencv_objdetect.so.409  libopencv_stitching.so.4.9.0  libopencv_video.so.4.9.0  libopencv_videoio.so.409
MediaGuard_Cmake/3rdlib/linux/x64/openssl-1.1.1q/: Makefile  configdata.pm  libcrypto.pc  libcrypto.so.1.1  libssl.so.1.1  pod2htmd.tmp
MediaGuard_Cmake/3rdlib/linux/x64/openssl-1.1.1q/apps/: openssl
MediaGuard_Cmake/3rdlib/linux/x64/openssl-1.1.1q/crypto/: buildinf.h
MediaGuard_Cmake/3rdlib/linux/x64/openssl-1.1.1q/fuzz/: asn1-test  x509-test
MediaGuard_Cmake/3rdlib/linux/x64/openssl-1.1.1q/test/: afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  casttest  chacha_internal_test  cipherbytes_test  cipherlist_test  ciphername_test  clienthellotest  cmactest  cmsapitest  conf_include_test  constant_time_test  crltest  ct_test  ctype_internal_test  curve448_internal_test  d2i_test  danetest  destest  dhtest  drbgtest  dsa_no_digest_size_test  dsatest  dtls_mtu_test  dtlstest  dtlsv1listentest  ec_internal_test  ecdsatest  (+69 more)
MediaGuard_Cmake/3rdlib/windows/x64/curl/lib/debug/: libssl.lib  (+2 more)
MediaGuard_Cmake/MediaGuard/: CMakeLists.txt
MediaGuard_Cmake/MediaGuard/cmake/: common_setting.cmake  linux_setting.cmake  mac_setting.cmake  msvc_setting.cmake
MediaGuard_Cmake/MediaGuard/src/: AudioStreamHandle.cpp  AudioStreamHandle.h  CarPlate.cpp  CarPlate.h  Common.h  ConstDef.h  FfmpegHelper.vcxproj  FfmpegHelper.vcxproj.filters  File.h  ManagerController.cpp  ManagerController.h  MediaGuard.vcxproj  MediaGuard.vcxproj.filters  README-en.md  RtspStreamHandle.cpp  RtspStreamHandle.h  StreamDefine.h  StreamHandle.h  StreamManager.cpp  StreamManager.h  ThreadPool.h  Time.h  UsbStreamHandle.cpp  UsbStreamHandle.h  config.xml  cpp.hint  main.cpp
MediaGuard_Cmake/MediaGuard/src/conf/: camera_list.json  camera_schedule_12.json  camera_tasks_list_12.json  camera_tasks_list_8.json  main_company_details_by_serialno.json
MediaGuard_Cmake/MediaGuard/src/hmac/: hmac_sha1.cpp  hmac_sha1.h  main_hmac_test.cpp  sha1.cpp
MediaGuard_Cmake/MediaGuard/src/httpserver/: README.md  comm.cpp  comm.h  httpserver.cc  httpserver.h
MediaGuard_Cmake/MediaGuard/src/include/Basic/: Base64.h  Basic.h  CrossPlat.h  RaiiHelper.h  ThreadObject.h  ThreadPool.h
MediaGuard_Cmake/MediaGuard/src/include/Common/: Base64.hpp  Cmd5.h  CrossPlat.h  CvMatToBase64.cpp  CvMatToBase64.h  JsonHelper.h  Macro.h  TransCoding.cpp  TransCoding.h
MediaGuard_Cmake/MediaGuard/src/include/Config/: ConfigFile.h  DeviceConfig.cpp  DeviceConfig.h
MediaGuard_Cmake/MediaGuard/src/include/ErrorInfo/: ErrorCode.h  ErrorMessage.cpp  ErrorMessage.h
MediaGuard_Cmake/MediaGuard/src/include/Http/: LibcurlHelper.cpp  LibcurlHelper.h
MediaGuard_Cmake/MediaGuard/src/include/easylogging/: EasyLogHelper.cpp  EasyLogHelper.h
MediaGuard_Cmake/MediaGuard/src/interface/: CameraList获取设备的镜头列表.MD  CameraMpeg.cpp  CameraMpeg.h  CameraMpegReadme.txt  DeviceInfo.cpp  DeviceInfo.h  ResponseDefine.h
MediaGuard_Cmake/MediaGuard/src/web/: playerTest.html
MediaGuard_Cmake/MediaGuard/src/web/css/: site.css
MediaGuard_Cmake/MediaGuard/src/web/js/: Main.js  chat.js  mediasinalR.js
MediaGuard_Cmake/Output/Debug/: CustomLib.lib  HelloWorld.lib  MathLibrary.exp
MediaGuard_Cmake/Output/Debug/conf/: camera_list.json  camera_schedule_8.json  device.json
MediaGuard_Cmake/Output/Debug/web/: corsTest.html
MediaGuard_Cmake/Output/Debug/web/css/: style_glyphicon.css
MediaGuard_Cmake/Output/Debug/web/js/: HistAlarmHub.js
MediaGuard_Cmake/Output/Release/: CustomLib.lib  HelloWorld.lib  Index.html  MathLibrary.exp  MathLibrary.lib  README1.md  README_httpSERVER.md
MediaGuard_Cmake/Output/Release/conf/: camera_schedule_12.json  camera_schedule_8.json  camera_tasks_list_12.json  config.json  device - 複製.json
MediaGuard_Cmake/Output/Release/web/: index.html  test.html  tokenTest.html
MediaGuard_Cmake/Output/Release/web/js/: LangPublic.js
MediaGuard_Cmake/Test/TestMath/: CMakeLists.txt
MediaGuard_Cmake/Test/TestMath/cmake/: common_setting.cmake  linux_setting.cmake  mac_setting.cmake  msvc_setting.cmake
MediaGuard_Cmake/Test/TestMath/src/: File.h  File1.h  ManagerController.cpp  ManagerController.h  Time.h  index.m3u8  main.cpp
MediaGuard_Cmake/cmake/: CMakeLists.txt  compilerconfig.cmake  global_setting.cmake  main.cpp  utils.cmake
MediaGuard_Cmake/include/CustomLib/: CustomLibrary.h
MediaGuard_Cmake/include/HelloWorld/: HelloWorld.h
MediaGuard_DOC/: AI_DEVICE_JSON SETTING MANUAL-HK .doc  DVR_AI_GUARD 设备注册与镜头RTSP添加操作說明-OLD - HK.doc  DVR_AI_MEDIAGUARD 系統操作說明 - HK.doc  LowLevelAnalysic_MediaGuard.vsdx  README.md  车牌计时接口与POST格式.docx
conf_格式備份/: camera_schedule_12.json  camera_schedule_8.json  camera_tasks_list_12.json  camera_tasks_list_8.json  device.json  deviceUtf8.json
(+72 files in other folders)
